--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,7 +8,18 @@
     <title>Higaki's Site</title>
     <link rel="stylesheet" href="static/css/index.css">
 </head>
+
 <body>
     <h1>Hello, World.</h1>
+    <form method="get" class="form">
+        <div class="form">
+            <label for="name">Enter your name: </label>
+            <input type="text" name="name" id="name" required>
+        </div>
+        <div class="form">
+            <input type="submit" value="Subscribe!">
+        </div>
+    </form>
 </body>
+
 </html>
