--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Hello, World.</h1>
-    <form method="get" class="form">
+    <form method="post" class="form">
         <div class="form">
             <label for="name">Enter your name: </label>
             <input type="text" name="name" id="name" required>
@@ -19,6 +19,7 @@
         <div class="form">
             <input type="submit" value="Subscribe!">
         </div>
+        
     </form>
 </body>
 
