--- a/index.html
+++ b/index.html
@@ -11,15 +11,20 @@
 
 <body>
     <h1>Hello, World.</h1>
-    <form method="post" class="form">
-        <div class="form">
-            <label for="name">Enter your name: </label>
-            <input type="text" name="name" id="name" required>
-        </div>
-        <div class="form">
-            <input type="submit" value="Subscribe!">
-        </div>
-        
+    <h2>フィードバックにご協力ください。</h2>
+    <form name="contact" method="POST" data-netlify="true">
+        <p>
+            <label>Your Name: <input type="text" name="name" /></label>
+        </p>
+        <p>
+            <label>Your Email: <input type="email" name="email" /></label>
+        </p>
+        <p>
+            <label>Message: <textarea name="message"></textarea></label>
+        </p>
+        <p>
+            <input type="submit" value="Submit!">
+        </p>
     </form>
 </body>
 
